ex-ingress.yaml
# Example of a minimal Ingress resource using nginx ingress controller

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    nginx.ingresskubernetes.io/rewrite-target: /
spec:
  ingressClassName: "expense.devsecopswithshri.site"
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
